index.html - changed some pictures for asides and added copyright info. Fixed/edited content as needed.

--- a/public_html/early_internet.html
+++ b/public_html/early_internet.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Early Internet">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="jscript/jscript.js"></script>
 </head>
 <body>
     <header>
@@ -88,10 +89,10 @@
                 <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
             </span>
             <span>
-                <a href="https://en.wikipedia.org/wiki/History_of_the_Internet">Wiki Link</a>
+                <a href="https://github.com/bobschicke/internet-history.git">Github Repostory</a>
             </span>
             <span>
-                <a href="https://github.com/bobschicke/CSS_Test">Article Download link</a>
+                <button onclick="w3cValidation()">W3C Validation</button>
             </span>
         </footer>
     </div>
