--- a/public_html/peoplenet.html
+++ b/public_html/peoplenet.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Social Sites">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="jscript/jscript.js"></script>
 </head>
 <body>
     <header>
@@ -72,11 +73,11 @@
         <section id="section3">
             <h2>Online Security</h2>
             <div class="hoverwrap">
-                <img src="images/https_cc.JPG" alt="This is a picture of Napster screenshot"/>
+                <img src="images/https_cc.JPG" alt="This is a picture of HTTPS"/>
                 <div class="hovermsg"><a href="https://www.flickr.com/photos/18090920@N07/15944989872">"https"</a> by <a href="https://www.flickr.com/photos/18090920@N07">Sean MacEntee</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
             </div>
             <div class="sectionText">
-                With all the financial information and intellectual property and critical control systems information that is flying around the internet, security became a huge concern.
+                With all the personal information, financial information, intellectual property and critical control systems information that was flying around the internet, security became a huge concern.
                 In 1975 Whitfield Diffie introduced the public key concept to encryption. In 1991 Phil Zimmerman created a public key encryption for the computer. This meant that finally it was easy to send messages and files over the internet securely.
                 <p>
                     In 1995 a major breakthrough in internet security was the Secure Communication (HTTPS). HTTPS uses Secure Sockets Layer (SSL) to encrypt the data. SSL was first developed by Netscape in 1995 for the purpose of ensuring privacy, authentication, and data integrity in Internet communications.
@@ -108,10 +109,10 @@
                 <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
             </span>
             <span>
-                <a href="https://en.wikipedia.org/wiki/History_of_the_Internet">Wiki Link</a>
+                <a href="https://github.com/bobschicke/internet-history.git">Github Repostory</a>
             </span>
             <span>
-                <a href="https://github.com/bobschicke/CSS_Test">Article Download link</a>
+                <button onclick="w3cValidation()">W3C Validation</button>
             </span>
         </footer>
     </div>
