--- a/public_html/pre-internet.html
+++ b/public_html/pre-internet.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Pre-Internet">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="jscript/jscript.js"></script>
 </head>
 <body>
     <header>
@@ -51,7 +52,7 @@
             <section id="section3">
                 <h2>Critical building blocks of networking</h2>
                 <div class="hoverwrap">
-                    <img src="images/network_cc.JPG" alt="This is a picture of a mainframe computer"/>
+                    <img src="images/network_cc.JPG" alt="This is a picture of a computer network"/>
                     <div class="hovermsg"><a href="https://www.flickr.com/photos/22555876@N00/142056834">"Network"</a> by <a href="https://www.flickr.com/photos/22555876@N00">Qaanaaq</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
@@ -82,10 +83,10 @@
                 <a href="https://www.linkedin.com/in/robert-schicke-b42a3670/">Bob Schicke&#169;</a>
             </span>
             <span>
-                <a href="https://en.wikipedia.org/wiki/History_of_the_Internet">Wiki Link</a>
+                <a href="https://github.com/bobschicke/internet-history.git">Github Repostory</a>
             </span>
             <span>
-                <a href="https://github.com/bobschicke/CSS_Test">Article Download link</a>
+                <button onclick="w3cValidation()">W3C Validation</button>
             </span>
         </footer>
     </div>
