Fixed W3C errors for iframe sizing using vw. Removed sizing which was being taken care of in the css anyway. Changed link in readme.md.

--- a/public_html/peoplenet.html
+++ b/public_html/peoplenet.html
@@ -89,7 +89,7 @@
         <aside>
             <h3>Napster vs Metallica - Tales From the Internet</h3>
             <div class="hoverwrap">
-                <iframe width="729" height="410" src="https://www.youtube.com/embed/Rlxaoy6NrFk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/Rlxaoy6NrFk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 Musicians just wanted to get paid for their work. I don't think that's too much to ask. But when Metalica asked, Napster said NO.
@@ -98,7 +98,7 @@
         <aside>
             <h3>A Brief History of Cybersecurity and Hacking</h3>
             <div class="hoverwrap">
-                <iframe width="729" height="410" src="https://www.youtube.com/embed/V6p7lFsokXo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/V6p7lFsokXo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 Believe it or not, computer hacking goes back to the ARPANET! Check out this interesting history of internet security.....or lack thereof.
