--- a/public_html/arpa-net.html
+++ b/public_html/arpa-net.html
@@ -69,7 +69,7 @@
         <aside>
             <h3>History of ARPANET</h3>
             <div class="hoverwrap">
-                <iframe width="300vw" height="200vw" src="https://www.youtube.com/embed/36H6z1Uq6gI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe  src="https://www.youtube.com/embed/36H6z1Uq6gI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
                 This is a 10-minute video that covers quite a lot of information and uses quite interesting grapics.
@@ -77,7 +77,7 @@
         </aside>
         <aside>
             <h3>Celebration of the Life of Robert W. Taylor Video</h3>
-            <iframe width="300vw" height="200" src="https://www.youtube.com/embed/7LpU3JuSElY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/7LpU3JuSElY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div>
                 This is a memorial to Bob Taylor by the people that knew and worked with him on his extensive career from creating ARPANET, to helping build the internet to what it is today. It is rather long, 2:25, but is interesting to hear the different perspectives of the many who contributed to this video.
             </div>
