--- a/public_html/pre-internet.html
+++ b/public_html/pre-internet.html
@@ -75,7 +75,7 @@
         <aside>
             <h3>The History of Computing Video</h3>
             <div>
-                <iframe width="500vw" height="150vw" src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </aside>
         <footer>
