Removed items from todo.txt Fixed spelling error on peoplenet.html

--- a/public_html/peoplenet.html
+++ b/public_html/peoplenet.html
@@ -44,7 +44,7 @@
                     <p>
                         Social Networking is about connecting with "friends" and posting personal information to friends and following others personal posts. There is some posting of media and commenting on it, but it's mostly about feeling connected with others.
                         Myspace 2003 was the original social media website and was hugely popular. Facebook followed in 2004 with a similar site and was very popular in colleges. Myspace was overtaken by Facebook in 2009
-                        Facebook 2004 – Mark Zuckerberg “The reason you spend so much time communicating with your friends and other people that you respect is because there opinions and what they say means a lot to you.”
+                        Facebook 2004 – Mark Zuckerberg “The reason you spend so much time communicating with your friends and other people that you respect is because their opinions and what they say means a lot to you.”
                     </p>
                     <p>
                         Blogging is news, opinions and information from one person directly to the audience, and many times there is a two way dialog. Anyone can start a blog on any subject. Some only get a few views, while others become huge successes.
