--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
         }
         header {
             width: 40%;
-            float: left;
+            /*float: left;*/
             text-align: center;
             font-size: 1.5vw;
             position: fixed;
