--- a/public_html/pylint_oop.html
+++ b/public_html/pylint_oop.html
@@ -5,7 +5,7 @@
     <title>Implementing Pylint</title>
     <meta name="description" content="Pre-Internet">
     <!-- COMMENT IN HTML -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_article.css">
     <script src="jscript/jscript.js"></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
             <section id="section1">
                 <h2>What is Pylint?</h2>
                 <div class="hoverwrap">
-                    <img src="images/mainframe.JPG" alt="This is a picture of a mainframe computer"/>
+                    <img src="images/sample.png" alt="This is a picture of a mainframe computer"/>
                     <div class="hovermsg"><a href="https://www.flickr.com/photos/9479603@N02/49755349401">"Mainframe Computer 1960"</a> by <a href="https://www.flickr.com/photos/9479603@N02"> PanelSwitchman</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
@@ -37,7 +37,7 @@
             <section id="section2">
                 <h2>What Does Pylint Test?</h2>
                 <div class="hoverwrap">
-                    <img src="images/sputnik_cc.JPG" alt="This is a picture of Sputnik satellite"/>
+                    <img src="images/sample.png" alt="This is a picture of Sputnik satellite"/>
                     <div class="hovermsg"><a href="https://www.flickr.com/photos/26244825@N05/8052668653">"Sputnik-1"</a> by <a href="https://www.flickr.com/photos/26244825@N05"> paukrus</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
@@ -49,7 +49,7 @@
             <section id="section3">
                 <h2>How to Configure Against Nuisance Warnings</h2>
                 <div class="hoverwrap">
-                    <img src="images/network_cc.JPG" alt="This is a picture of a computer network"/>
+                    <img src="images/sample.png" alt="This is a picture of a computer network"/>
                     <div class="hovermsg"><a href="https://www.flickr.com/photos/22555876@N00/142056834">"Network"</a> by <a href="https://www.flickr.com/photos/22555876@N00">Qaanaaq</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
